Attempting another image flickering fix and added disclaimer that performance is best in Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,11 @@ a {
     text-align: center;
 }
 
+#title-credit img {
+    width: 32px;
+    height: 32px;
+}
+
 #player-name-prompt-popup {
     display: none;
     position: absolute;
